# internal/controller/account/2fa_controller.go
@@ -1,0 +1,83 @@
+package account
+
+import (
+	"log"
+
+	"github.com/anhduynguyen1207/go-ecommerce-backend-api/internal/model"
+	"github.com/anhduynguyen1207/go-ecommerce-backend-api/internal/service"
+	"github.com/anhduynguyen1207/go-ecommerce-backend-api/internal/utils/context"
+	"github.com/anhduynguyen1207/go-ecommerce-backend-api/pkg/response"
+	"github.com/gin-gonic/gin"
+)
+
+var TwoFA = new(cUser2FA)
+
+type cUser2FA struct {
+}
+
+// User Setup Two Factor Authentication
+// @Summary      User Setup Two Factor Authentication
+// @Description User Setup Two Factor Authentication
+// @Tags         account 2fa
+// @Accept       json
+// @Produce      json
+// @param Authorization header string true "Authorization token"
+// @Param        payload body model.SetupTwoFactorAuthInput true "payload"
+// @Success      200  {object}  response.ResponseData
+// @Failure      500  {object}  response.ErrorResponseData
+// @Router       /user/two-factor/setup [post]
+func (c *cUser2FA) SetupTwoFactorAuth(ctx *gin.Context) {
+	var params model.SetupTwoFactorAuthInput
+	if err := ctx.ShouldBindJSON(&params); err != nil {
+		response.ErrorResponse(ctx, response.ErrCodeTwoFactorAuthSetupFailed, "Missing or invalid setupTwoFactorAuth")
+		return
+	}
+	// get UserId from uuid (token)
+	userId, err := context.GetUserIdFromUUID(ctx.Request.Context())
+	if err != nil {
+		response.ErrorResponse(ctx, response.ErrCodeTwoFactorAuthSetupFailed, "UserId is not valid")
+		return
+	}
+	log.Println("UserId:", userId)
+	params.UserId = uint32(userId)
+	codeResult, err := service.UserLogin().SetupTwoFactorAuth(ctx, &params)
+	if err != nil {
+		response.ErrorResponse(ctx, response.ErrCodeTwoFactorAuthSetupFailed, err.Error())
+		return
+	}
+	response.SuccessResponse(ctx, codeResult, nil)
+
+}
+
+// User verify Two Factor Authentication
+// @Summary      User verify Two Factor Authentication
+// @Description User verify Two Factor Authentication
+// @Tags         account 2fa
+// @Accept       json
+// @Produce      json
+// @param Authorization header string true "Authorization token"
+// @Param        payload body model.TwoFactorVerificationInput true "payload"
+// @Success      200  {object}  response.ResponseData
+// @Failure      500  {object}  response.ErrorResponseData
+// @Router       /user/two-factor/verify [post]
+func (c *cUser2FA) VerifyTwoFactorAuth(ctx *gin.Context) {
+	var params model.TwoFactorVerificationInput
+	if err := ctx.ShouldBindJSON(&params); err != nil {
+		response.ErrorResponse(ctx, response.ErrCodeTwoFactorAuthSetupFailed, "Missing or invalid setupTwoFactorAuth")
+		return
+	}
+	// get UserId from uuid (token)
+	userId, err := context.GetUserIdFromUUID(ctx.Request.Context())
+	if err != nil {
+		response.ErrorResponse(ctx, response.ErrCodeTwoFactorAuthSetupFailed, "UserId is not valid")
+		return
+	}
+	log.Println("VerifyTwoFactorAuth::", userId)
+	params.UserId = uint32(userId)
+	codeResult, err := service.UserLogin().VerifyTwoFactorAuth(ctx, &params)
+	if err != nil {
+		response.ErrorResponse(ctx, response.ErrCodeTwoFactorAuthSetupFailed, err.Error())
+		return
+	}
+	response.SuccessResponse(ctx, codeResult, nil)
+}
