# internal/model/login.go
@@ -30,3 +30,15 @@ type LoginOutput struct {
 	Token   string `json:"token"`
 	Message string `json:"message"`
 }
+
+// two factor authentication
+type SetupTwoFactorAuthInput struct {
+	UserId            uint32 `json:"user_id"`
+	TwoFactorAuthType string `json:"two_factor_auth_type"`
+	TwoFactorEmail    string `json:"two_factor_email"`
+}
+
+type TwoFactorVerificationInput struct {
+	UserId        uint32 `json:"user_id"`
+	TwoFactorCode string `json:"two_factor_code"`
+}
