# middleware/auth.middleware.go
@@ -1,18 +1,0 @@
-package middleware
-
-import (
-	"github.com/anhduynguyen1207/go-ecommerce-backend-api/pkg/response"
-	"github.com/gin-gonic/gin"
-)
-
-func AuthenMiddleware() gin.HandlerFunc {
-	return func(c *gin.Context) {
-		token := c.GetHeader("Authorization")
-		if token != "valid-token" {
-			response.ErrorResponse(c, response.ErrInvalidToken, "")
-			c.Abort()
-			return
-		}
-		c.Next()
-	}
-}
